ipsvd 0.8.1
Sun, 22 Feb 2004 14:40:31 +0000
  * udpsvd: fix usage information output.
  * doc/upgrade.html: typo.
  * check-diff, check-dist, check-local: new; run checks on programs.
  * ipsvd-cdb.check, tcpsvd.check, udpsvd.check: new; check program.
  * ipsvd-cdb.dist, tcpsvd.dist, udpsvd.dist: new; dist test program output.
  * Makefile: run program checks by default.

ipsvd 0.8.0
Fri, 13 Feb 2004 19:42:17 +0000
  * doc/index.html: typo; related links; minor.
  * doc/examples.html, man/ipsvd-instruct.5: typos.
  * doc/install.html: typo (thx Charlie Brady).
  * byte_zero.c, case.h, case_diffb.c, dns.h, dns_dfd.c, dns_domain.c,
    dns_dtda.c, dns_ip.c, dns_ipq.c, dns_mx.c, dns_name.c, dns_nd.c,
    dns_packet.c, dns_random.c, dns_rcip.c, dns_rcrw.c, dns_resolve.c,
    dns_sortip.c, dns_transmit.c, dns_txt.c, ip4.h, ip4_scan.c, socket.h,
    socket_bind.c, socket_conn.c, socket_tcp.c, socket_udp.c,
    stralloc_copy.c, test.c, uint16.h, uint16_pack.c, uint16_unpack.c: new;
    from djbdns-pd-1.05, public domain.
  * Makefile: adapt; use included djbdns client library.
  * doc/install.html, doc/usedietlibc.html: adapt; package build no longer
    requires djbdns-pd-1.05.
  * ipsvd_hostname.c, ipsvd_hostname.h, print-cc.sh, print-ld.sh, tcpsvd.c,
    udpsvd.c: adapt includes; minor.
  * conf-djbdnsinc, conf-djbdnslib: remove; obsolete.
  * package/COPYING, package/README: 2004.
  * package/compile, package/install-man, package/upgrade: minor cleanup.

ipsvd 0.7.1
Wed, 26 Nov 2003 09:14:35 +0000
  * Makefile: target ipsvd-cdb: add libraries needed for socket() (fixes
    build failure on solaris, thx Uffe Jakobsen).
  * man/ipsvd.7: typo.
  * ipsvd-cdb.c: bug: deny-entries possibly became instruction-entries in
    the cdb, fix: reset stralloc before ipsvd_check() (thx Lukas Beeler).
  * doc/index.html: minor.

ipsvd 0.7.0
Tue, 21 Oct 2003 15:59:30 +0000
  * doc/examples.html: update bincimaps example; add check hostname
    instruction sample.