@@ -77,63 +77,64 @@ the name string is not set. </dd>
 <dd>concurrency. If the line starts with
 a &lsquo;&lsquo;C&rsquo;&rsquo;, and is followed by a number, the per host concurrency limit for the
 IP address that initiated the connection is set to this number. If <i>num</i> is
-followed by &lsquo;&lsquo;:<i>msg&rsquo;&rsquo;,</i> the message <i>msg</i> is written to this client if possible,
-if the per host concurrency limit is reached. 
-<p> <i>msg</i> may contain backslash-escaped
-characters as follows: &lsquo;&lsquo;\\&rsquo;&rsquo; is converted to a single backslash, &lsquo;&lsquo;\n&rsquo;&rsquo; is converted
-to a new line character, and &lsquo;&lsquo;\r&rsquo;&rsquo; is converted to a carriage return. 
-<p> On multiple
-concurrency instructions the last processed concurrency instruction is
-considered. Not all <i><b>ipsvd</b>(7)</i>&rsquo;s support per host concurrency. </dd>
+zero, per host concurrency limit is disabled. If <i>num</i> is followed by &lsquo;&lsquo;:<i>msg&rsquo;&rsquo;,</i>
+the message <i>msg</i> is written to this client if possible, if the per host
+concurrency limit is reached. 
+<p> <i>msg</i> may contain backslash-escaped characters
+as follows: &lsquo;&lsquo;\\&rsquo;&rsquo; is converted to a single backslash, &lsquo;&lsquo;\n&rsquo;&rsquo; is converted to a new
+line character, and &lsquo;&lsquo;\r&rsquo;&rsquo; is converted to a carriage return. 
+<p> On multiple concurrency
+instructions the last processed concurrency instruction is considered. Not
+all <i><b>ipsvd</b>(7)</i>&rsquo;s support per host concurrency. </dd>
 
-<dt><b>=</b><i>hostname[:<i>forward</i>]</i>
-</dt>
-<dd>check hostname. If the line starts with a &lsquo;&lsquo;=&rsquo;&rsquo;, and is followed by a hostname,
-<i><b>ipsvd</b>(7)</i> looks up the IP addresses for <i>hostname</i> in DNS and checks if the
-client&rsquo;s IP address matches one of these IP addresses. If so, <i><i>ipsvd</i>(7)</i> stops
-processing the instructions here and runs <i>prog</i>. If <i>hostname</i> is followed
-a colon and <i>forward</i>, <i><b>ipsvd</b>(7)</i> now examines the file <i>forward</i> and acts accordingly,
-instead of running <i>prog</i>. All check hostname instructions in <i>forward</i> are
-ignored. If <i>forward</i> does not exist, the connection is closed. 
-<p> <i>hostname</i> may
-be &lsquo;&lsquo;0&rsquo;&rsquo; (zero), matching any IP address. 
-<p> Note: Using check hostname instructions
-can cause significant delay while responding to connection attempts, caused
-by DNS lookups. </dd>
+<dt><b>=</b><i>hostname[:<i>forward</i>]</i> </dt>
+<dd>check hostname.
+If the line starts with a &lsquo;&lsquo;=&rsquo;&rsquo;, and is followed by a hostname, <i><b>ipsvd</b>(7)</i> looks
+up the IP addresses for <i>hostname</i> in DNS and checks if the client&rsquo;s IP address
+matches one of these IP addresses. If so, <i><i>ipsvd</i>(7)</i> stops processing the
+instructions here and runs <i>prog</i>. If <i>hostname</i> is followed a colon and <i>forward</i>,
+<i><b>ipsvd</b>(7)</i> now examines the file <i>forward</i> and acts accordingly, instead of
+running <i>prog</i>. All check hostname instructions in <i>forward</i> are ignored. If
+<i>forward</i> does not exist, the connection is closed. 
+<p> <i>hostname</i> may be &lsquo;&lsquo;0&rsquo;&rsquo; (zero),
+matching any IP address. 
+<p> Note: Using check hostname instructions can cause
+significant delay while responding to connection attempts, caused by DNS
+lookups. </dd>
 </dl>
 <p>
-If <i><b>ipsvd</b>(7)</i> cannot interpret a line, it prints a warning,
-discards the line, and continues with the next instruction if any. <p>
-After
-processing all instructions, <i><b>ipsvd</b>(7)</i> runs <i>prog</i>. If the file contains at
-least one check hostname instruction, and none was successful, it closes
-the connection instead of running <i>prog</i>. 
+If <i><b>ipsvd</b>(7)</i> cannot interpret a line, it prints a warning, discards
+the line, and continues with the next instruction if any. <p>
+After processing
+all instructions, <i><b>ipsvd</b>(7)</i> runs <i>prog</i>. If the file contains at least one
+check hostname instruction, and none was successful, it closes the connection
+instead of running <i>prog</i>. 
 <h2><a name='sect4'>Example Instructions</a></h2>
 
 <dl>
 
-<dt>+MEMORY=20000
-</dt>
-<dd>This instruction causes the environment variable &lsquo;&lsquo;MEMORY&rsquo;&rsquo; with the value
-&lsquo;&lsquo;20000&rsquo;&rsquo; to be available to the program <i>prog</i> that handles the connection. </dd>
+<dt>+MEMORY=20000 </dt>
+<dd>This instruction
+causes the environment variable &lsquo;&lsquo;MEMORY&rsquo;&rsquo; with the value &lsquo;&lsquo;20000&rsquo;&rsquo; to be available
+to the program <i>prog</i> that handles the connection. </dd>
 
-<dt>+DEBUG=
-</dt>
-<dd>This instruction adds the variable &lsquo;&lsquo;DEBUG&rsquo;&rsquo; with an empty value to the environment.
-</dd>
+<dt>+DEBUG= </dt>
+<dd>This instruction
+adds the variable &lsquo;&lsquo;DEBUG&rsquo;&rsquo; with an empty value to the environment. </dd>
 
-<dt>+LOGNAME </dt>
-<dd>This instructions makes sure that the environment variable &lsquo;&lsquo;LOGNAME&rsquo;&rsquo;
-is unset when running <i>prog</i>. </dd>
+<dt>+LOGNAME
+</dt>
+<dd>This instructions makes sure that the environment variable &lsquo;&lsquo;LOGNAME&rsquo;&rsquo; is unset
+when running <i>prog</i>. </dd>
 
 <dt>C16 </dt>
-<dd>Set the per host concurrency to 16. A connection
-will be closed silently if there are already 16 active connections from
-this client&rsquo;s IP address. </dd>
+<dd>Set the per host concurrency to 16. A connection will
+be closed silently if there are already 16 active connections from this
+client&rsquo;s IP address. </dd>
 
 <dt>=floyd.dyn.smarden.org:127.0.0.1 </dt>
-<dd>Check IP address of
-the dynamic hostname <i>floyd.dyn.smarden.org</i>. If one of the IP addresses <i>floyd.dyn.smarden.org</i>
+<dd>Check IP address of the dynamic
+hostname <i>floyd.dyn.smarden.org</i>. If one of the IP addresses <i>floyd.dyn.smarden.org</i>
 currently resolves to matches the client&rsquo;s IP address, handle the connection
 through the file <i>127.0.0.1</i> in the instructions directory. </dd>
 </dl>
