@@ -110,6 +110,9 @@ concurrency limit for the IP address that initiated the connection is set to
 this number.
 If
 .I num
+is zero, per host concurrency limit is disabled.
+If
+.I num
 is followed by
 .RI ``: msg\fR'',
 the message
